--- a/proj5/project5_stage2.ipynb
+++ b/proj5/project5_stage2.ipynb
@@ -202,7 +202,7 @@
     "id": "4iwyskIizV1A"
    },
    "source": [
-    "Log into Hugging Face and Weights & Biases."
+    "Log into Weights & Biases for tracking the runs."
    ]
   },
   {
@@ -245,6 +245,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Log into HuggingFace, needed for the LLama model. Access is restricted otherwise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -268,6 +275,13 @@
    ],
    "source": [
     "hf_login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define constants that will be used later"
    ]
   },
   {
@@ -345,6 +359,55 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cast the labels into string, as the expected output is also a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_cast = train_raw.cast_column(\"answer\", Value(\"string\"))\n",
+    "valid_cast = valid_raw.cast_column(\"answer\", Value(\"string\"))\n",
+    "test_cast = test_raw.cast_column(\"answer\", Value(\"string\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform the data into a usable format for supervised fine tuning (SFT).\n",
+    "\n",
+    "The model needs to learn the pattern, therefore the answer is included into the text for training and validation data.\n",
+    "But for the test data the answer is not in the text and the model has to predict the label."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_dataset(row):\n",
+    "    text = f\"### Question: {row['question']}\\n ### Context: {row['passage']}\\n ### Answer: {row['answer']}\"\n",
+    "    row[\"text\"] = text\n",
+    "    return row\n",
+    "\n",
+    "def preprocess_test_dataset(row):\n",
+    "    text = f\"### Question: {row['question']}\\n ### Context: {row['passage']}\\n ### Answer:\"\n",
+    "    row[\"text\"] = text\n",
+    "    return row\n",
+    "\n",
+    "train = train_cast.map(preprocess_dataset)\n",
+    "valid = valid_cast.map(preprocess_dataset)\n",
+    "test = test_cast.map(preprocess_test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Rmm9LrxkzV1D"
    },
@@ -361,6 +424,10 @@
     "Predictions:\n",
     "The model should generate either \"True\" or \"False\" to the question based on the given input. Based on that metrics can be calculated.\n",
     "If it predicts something else than the expected outputs, it will be counted seperatly as a failed prediction.\n",
+    "\n",
+    "This can be achieved by extracting the predicted label from the end of the prompt. The template for the model to learn is that it should either be \"True\" or \"False\" at the end after the \"### Answer:\" part. Because this is the format being used to train and validate for SFT.\n",
+    "\n",
+    "Including the label in the training seems counter intuitive, but it has to be done this way, because SFT adjusts the model to output what the expected labels. Therefore when the model is evaluated in the end with the test dataset, the label are not included in the prompt anymore.\n",
     "\n",
     "Normalization: LLama has a RMSNorm layer.\n",
     "\n",
@@ -380,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "WJZWHj3ZzV1D",
     "scrolled": true
@@ -395,33 +462,40 @@
     }
    ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "\n",
-    "lora_config = LoraConfig(\n",
-    "    r=16,\n",
-    "    lora_alpha=32,\n",
-    "    lora_dropout=0.05,\n",
-    "    bias=\"none\",\n",
-    "    task_type=\"CAUSAL_LM\",\n",
-    "    base_model_name_or_path=MODEL\n",
-    ")\n",
-    "\n",
-    "model = AutoModelForCausalLMWithValueHead.from_pretrained(\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
     "    MODEL,\n",
-    "    #peft_config=lora_config,\n",
-    "    max_length=8000,\n",
-    "    device_map = 'cuda'\n",
+    "    device_map=\"auto\",\n",
+    "    torch_dtype=\"float16\",\n",
     ")\n",
     "\n",
-    "def formatting_prompts_func(example, include_answer=True):\n",
-    "    output_texts = []\n",
-    "    for i in range(len(example['question'])):\n",
-    "        text = f\"### Question: {example['question'][i]}\\n ### Context: {example['passage'][i]}\\n ### Answer:\"\n",
-    "        if include_answer:\n",
-    "            text += str(example['answer'][i])\n",
-    "        output_texts.append(text)\n",
-    "    return output_texts"
+    "model.config.use_cache = False\n",
+    "model.config.pretraining_tp = 1\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
+    "\n",
+    "tokenizer.pad_token_id = tokenizer.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only generate two new tokens which should be the label (true, false) and an eos marker.\n",
+    "\n",
+    "Use a low temperature, because it controls the randomness of the answer. As we want an accuracte answer based on the question and passage a low temeprature is more fitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pipe = pipeline(task=\"text-generation\",\n",
+    "                model=model,\n",
+    "                tokenizer=tokenizer,\n",
+    "                max_new_tokens=2,\n",
+    "                temperature=0.1)"
    ]
   },
   {
@@ -437,7 +511,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_test = train_cast.map(preprocess_test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pipe(train_test[0][\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,8 +544,8 @@
     }
    ],
    "source": [
-    "tokenized = tokenizer(train_raw[0][\"question\"], return_tensors=\"pt\").to(\"cuda\")\n",
-    "tokenizer.batch_decode(model.generate(tokenized[\"input_ids\"], max_time=1, pad_token_id=tokenizer.pad_token_id))"
+    "#tokenized = tokenizer(train_raw[0][\"question\"], return_tensors=\"pt\").to(\"cuda\")\n",
+    "#tokenizer.batch_decode(model.generate(tokenized[\"input_ids\"], max_time=1, pad_token_id=tokenizer.pad_token_id))"
    ]
   },
   {
@@ -467,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "bpr715v7zV1D"
    },
@@ -507,6 +599,7 @@
     }
    ],
    "source": [
+    "\n",
     "for i, prompt in enumerate(formatting_prompts_func(train_raw[:5], False)):\n",
     "    tokenized = tokenizer(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
     "    print(f\"Prompt {i+1}:\")\n",
@@ -594,6 +687,7 @@
     "- Metrics are logged every epoch. Because logging per step is very noisy and does not have a benefit.\n",
     "\n",
     "Loss is the main metric for all decisions, as it is the most important metric for the model. Accuracy should follow loss in a correct model. Therefore, it is not necessary to optimize for accuracy.\n",
+    "Loss might diverge from accuracy when the model becomes over confident in wrong guesses. But \n",
     "\n",
     "As discussed in class no other metrics are needed for training and validation. As accuracy and loss are sufficient to evaluate the model performance.\n",
     "\n",
@@ -621,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "id": "MRQ1wN1yzV1F",
     "scrolled": true
@@ -651,33 +745,53 @@
     }
    ],
    "source": [
-    "response_template = \" ### Answer:\"\n",
-    "collator = DataCollatorForCompletionOnlyLM(response_template, tokenizer=tokenizer)\n",
-    "lora_config = LoraConfig(\n",
-    "    r=16,\n",
-    "    lora_alpha=32,\n",
-    "    lora_dropout=0.05,\n",
-    "    use_rslora=True,\n",
-    "    init_lora_weights=\"pissa\",\n",
+    "output_dir=\"llama-3.1-fine-tuned-model\"\n",
+    "\n",
+    "peft_config = LoraConfig(\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0,\n",
+    "    r=64,\n",
+    "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\",\n",
-    "    base_model_name_or_path=MODEL\n",
+    "    #target_modules=modules,\n",
     ")\n",
-    "sft_config = SFTConfig(\n",
-    "    output_dir=\"/tmp\",\n",
-    "    run_name=\"test-run\",\n",
-    "    report_to=\"wandb\",\n",
-    "    max_seq_length=8000,\n",
-    "    per_device_train_batch_size=1,\n",
+    "\n",
+    "training_arguments = TrainingArguments(\n",
+    "    output_dir=output_dir,                    # directory to save and repository id\n",
+    "    num_train_epochs=1,                       # number of training epochs\n",
+    "    per_device_train_batch_size=1,            # batch size per device during training\n",
+    "    gradient_accumulation_steps=8,            # number of steps before performing a backward/update pass\n",
+    "    gradient_checkpointing=True,              # use gradient checkpointing to save memory\n",
+    "    optim=\"paged_adamw_32bit\",\n",
+    "    logging_steps=1,                         \n",
+    "    learning_rate=2e-4,                       # learning rate, based on QLoRA paper\n",
+    "    weight_decay=0.001,\n",
+    "    fp16=True,\n",
+    "    bf16=False,\n",
+    "    max_grad_norm=0.3,                        # max gradient norm based on QLoRA paper\n",
+    "    max_steps=-1,\n",
+    "    warmup_ratio=0.03,                        # warmup ratio based on QLoRA paper\n",
+    "    group_by_length=False,\n",
+    "    lr_scheduler_type=\"cosine\",               # use cosine learning rate scheduler\n",
+    "    report_to=\"wandb\",                  # report metrics to w&b\n",
+    "    eval_strategy=\"steps\",              # save checkpoint every epoch\n",
+    "    eval_steps = 0.2,\n",
     ")\n",
+    "\n",
     "trainer = SFTTrainer(\n",
-    "    model,\n",
-    "    train_dataset=train_raw,\n",
-    "    eval_dataset=valid_raw,\n",
-    "    peft_config=lora_config,\n",
+    "    model=model,\n",
+    "    args=training_arguments,\n",
+    "    train_dataset=train,\n",
+    "    eval_dataset=valid,\n",
+    "    peft_config=peft_config,\n",
+    "    dataset_text_field=\"text\",\n",
     "    tokenizer=tokenizer,\n",
-    "    args=sft_config,\n",
-    "    formatting_func=formatting_prompts_func,\n",
-    "    data_collator=collator,\n",
+    "    max_seq_length=512,\n",
+    "    packing=False,\n",
+    "    dataset_kwargs={\n",
+    "    \"add_special_tokens\": False,\n",
+    "    \"append_concat_token\": False,\n",
+    "    }\n",
     ")"
    ]
   },
@@ -761,11 +875,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(test, model, tokenizer):\n",
+    "    y_pred = []\n",
+    "    categories = [\"true\", \"false\"]\n",
+    "\n",
+    "    for i in tqdm(range(len(test))):\n",
+    "        prompt = test[i][\"text\"]\n",
+    "        pipe = pipeline(task=\"text-generation\",\n",
+    "                        model=model,\n",
+    "                        tokenizer=tokenizer,\n",
+    "                        max_new_tokens=2,\n",
+    "                        temperature=0.1)\n",
+    "\n",
+    "        result = pipe(prompt)\n",
+    "        answer = result[0]['generated_text'].split(\"label:\")[-1].strip()\n",
+    "\n",
+    "        # Determine the predicted category\n",
+    "        for category in categories:\n",
+    "            if category.lower() in answer.lower():\n",
+    "                y_pred.append(category)\n",
+    "                break\n",
+    "        else:\n",
+    "            y_pred.append(\"none\")\n",
+    "\n",
+    "    return y_pred\n",
+    "\n",
+    "y_pred = predict(train, model, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "XFHJOQA_zV1F"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate(y_true, y_pred):\n",
+    "    labels = [\"true\", \"false\"]\n",
+    "    mapping = {label: idx for idx, label in enumerate(labels)}\n",
+    "    \n",
+    "    def map_func(x):\n",
+    "        return mapping.get(x, -1)  # Map to -1 if not found, but should not occur with correct data\n",
+    "    \n",
+    "    y_true_mapped = np.vectorize(map_func)(y_true)\n",
+    "    y_pred_mapped = np.vectorize(map_func)(y_pred)\n",
+    "    \n",
+    "    # Calculate accuracy\n",
+    "    accuracy = accuracy_score(y_true=y_true_mapped, y_pred=y_pred_mapped)\n",
+    "    print(f'Accuracy: {accuracy:.3f}')\n",
+    "    \n",
+    "    # Generate accuracy report\n",
+    "    unique_labels = set(y_true_mapped)  # Get unique labels\n",
+    "    \n",
+    "    for label in unique_labels:\n",
+    "        label_indices = [i for i in range(len(y_true_mapped)) if y_true_mapped[i] == label]\n",
+    "        label_y_true = [y_true_mapped[i] for i in label_indices]\n",
+    "        label_y_pred = [y_pred_mapped[i] for i in label_indices]\n",
+    "        label_accuracy = accuracy_score(label_y_true, label_y_pred)\n",
+    "        print(f'Accuracy for label {labels[label]}: {label_accuracy:.3f}')\n",
+    "        \n",
+    "    # Generate classification report\n",
+    "    class_report = classification_report(y_true=y_true_mapped, y_pred=y_pred_mapped, target_names=labels, labels=list(range(len(labels))))\n",
+    "    print('\\nClassification Report:')\n",
+    "    print(class_report)\n",
+    "    \n",
+    "    # Generate confusion matrix\n",
+    "    conf_matrix = confusion_matrix(y_true=y_true_mapped, y_pred=y_pred_mapped, labels=list(range(len(labels))))\n",
+    "    print('\\nConfusion Matrix:')\n",
+    "    print(conf_matrix)\n",
+    "\n",
+    "y_true = train[\"answer\"]\n",
+    "evaluate(y_true, y_pred)"
+   ]
   },
   {
    "cell_type": "markdown",
